--- a/turbo.json
+++ b/turbo.json
@@ -1,11 +1,29 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "tasks": {
-    "build": { "dependsOn": ["^build"], "outputs": ["dist/**", "build/**"] },
-    "dev": { "cache": false, "persistent": true },
+    "build": {
+      "dependsOn": [
+        "^build"
+      ],
+      "outputs": [
+        "dist/**",
+        "build/**"
+      ]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
+    },
     "lint": {},
     "typecheck": {},
-    "test": { "dependsOn": ["^test"] },
-    "start": { "cache": false, "persistent": true }
+    "test": {
+      "dependsOn": [
+        "^test"
+      ]
+    },
+    "start": {
+      "cache": false,
+      "persistent": true
+    }
   }
 }
