--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hr/api",
-  "version": "0.0.3",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -17,15 +17,23 @@
     "rls:smoke": "tsx scripts/rls-smoke.ts"
   },
   "dependencies": {
+    "@asteasolutions/zod-to-openapi": "^7.1.1",
     "@prisma/client": "^5.18.0",
+    "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "helmet": "^7.1.0",
-    "pino": "^9.4.0"
+    "jsonwebtoken": "^9.0.2",
+    "pino": "^9.4.0",
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/express": "^4.17.21",
+    "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
+    "@types/swagger-ui-express": "^4.1.6",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "eslint": "^9.10.0",
