--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,5 +1,9 @@
 {
   "extends": "../../packages/config/tsconfig/base.json",
-  "compilerOptions": { "jsx": "react-jsx" },
+  "compilerOptions": {
+    "jsx": "react-jsx",
+    "baseUrl": "./src",
+    "paths": { "@/*": ["*"] }
+  },
   "include": ["src", "vite.config.ts", "index.html"]
 }
