--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@hr/worker",
-  "version": "0.0.1",
+  "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
@@ -12,6 +12,8 @@
     "test": "node -e \"console.log('ok')\""
   },
   "dependencies": {
+    "@prisma/client": "^5.18.0",
+    "bullmq": "^5.10.3",
     "ioredis": "^5.4.1"
   },
   "devDependencies": {
@@ -19,6 +21,7 @@
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
     "eslint": "^9.10.0",
+    "prisma": "^5.18.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.4"
   }
