--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -56,9 +56,21 @@ services:
     command: pnpm --filter @hr/api dev
     environment:
       PORT: 3000
+      STORAGE_ENDPOINT: http://minio:9000
+      STORAGE_REGION: us-east-1
+      STORAGE_ACCESS_KEY: minio
+      STORAGE_SECRET_KEY: minio123
+      STORAGE_BUCKET: hr-dev
+      STORAGE_USE_TLS: "false"
+      REDIS_URL: redis://redis:6379
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/hr?schema=public
     ports: ["3000:3000"]
     depends_on:
       postgres:
+        condition: service_healthy
+      minio:
+        condition: service_healthy
+      redis:
         condition: service_healthy
     volumes:
       - .:/srv
@@ -71,6 +83,7 @@ services:
     command: pnpm --filter @hr/web dev
     environment:
       PORT: 5173
+      VITE_API_URL: http://localhost:3000
     ports: ["5173:5173"]
     depends_on:
       - api
@@ -85,8 +98,11 @@ services:
     command: pnpm --filter @hr/worker dev
     environment:
       REDIS_URL: redis://redis:6379
+      DATABASE_URL: postgresql://postgres:postgres@postgres:5432/hr?schema=public
     depends_on:
       redis:
+        condition: service_healthy
+      postgres:
         condition: service_healthy
     volumes:
       - .:/srv
