--- a/apps/worker/tsconfig.json
+++ b/apps/worker/tsconfig.json
@@ -1,5 +1,10 @@
 {
   "extends": "../../packages/config/tsconfig/base.json",
-  "compilerOptions": { "outDir": "dist", "types": ["node"] },
+  "compilerOptions": {
+    "outDir": "dist",
+    "types": ["node"],
+    "module": "esnext",
+    "target": "es2022"
+  },
   "include": ["src"]
 }
