--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -1,3 +1,4 @@
+
 {
   "name": "@hr/worker",
   "version": "0.2.0",
@@ -13,13 +14,16 @@
   },
   "dependencies": {
     "@aws-sdk/client-s3": "^3.666.0",
+    "axios": "^1.7.7",
     "bullmq": "^5.10.3",
     "ioredis": "^5.4.1",
     "@prisma/client": "^5.18.0",
+    "nodemailer": "^6.9.14",
     "pdfkit": "^0.15.0"
   },
   "devDependencies": {
     "@types/node": "^20.11.30",
+    "@types/nodemailer": "^6.4.15",
     "@types/pdfkit": "^0.13.4",
     "@typescript-eslint/eslint-plugin": "^8.3.0",
     "@typescript-eslint/parser": "^8.3.0",
