--- a/turbo.json
+++ b/turbo.json
@@ -1,29 +1,22 @@
 {
   "$schema": "https://turbo.build/schema.json",
-  "tasks": {
-    "build": {
-      "dependsOn": [
-        "^build"
-      ],
-      "outputs": [
-        "dist/**",
-        "build/**"
-      ]
-    },
+  "globalDependencies": [
+    "pnpm-lock.yaml",
+    "package.json",
+    "pnpm-workspace.yaml",
+    "**/.env*"
+  ],
+  "pipeline": {
     "dev": {
       "cache": false,
       "persistent": true
     },
-    "lint": {},
-    "typecheck": {},
-    "test": {
-      "dependsOn": [
-        "^test"
-      ]
+    "build": {
+      "dependsOn": ["^build"],
+      "outputs": ["dist/**", "build/**", ".next/**", "apps/**/dist/**"]
     },
-    "start": {
-      "cache": false,
-      "persistent": true
-    }
+    "lint": { "outputs": [] },
+    "typecheck": { "outputs": [] },
+    "test": { "outputs": [] }
   }
 }
