--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -17,8 +17,8 @@
   },
   "dependencies": {
     "@asteasolutions/zod-to-openapi": "^7.1.1",
-    "@aws-sdk/client-s3": "^3.666.0",
-    "@aws-sdk/s3-request-presigner": "^3.666.0",
+    "@aws-sdk/client-s3": "3.616.0",
+    "@aws-sdk/s3-request-presigner": "3.616.0",
     "@prisma/client": "^5.18.0",
     "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
@@ -36,7 +36,6 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
-    "@types/express-rate-limit": "^5.1.7",
     "@types/jest": "^29.5.12",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/node": "^20.11.30",
