--- a/apps/web/tsconfig.json
+++ b/apps/web/tsconfig.json
@@ -1,9 +1,14 @@
 {
-  "extends": "../../packages/config/tsconfig/base.json",
   "compilerOptions": {
+    "target": "ES2020",
+    "lib": ["ES2020", "DOM", "DOM.Iterable"],
     "jsx": "react-jsx",
-    "baseUrl": "./src",
-    "paths": { "@/*": ["*"] }
+    "module": "ESNext",
+    "moduleResolution": "Bundler",
+    "strict": true,
+    "skipLibCheck": true,
+    "noEmit": true,
+    "types": []
   },
-  "include": ["src", "vite.config.ts", "index.html"]
+  "include": ["src"]
 }
