--- a/apps/worker/package.json
+++ b/apps/worker/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "@hr/worker",
   "version": "0.2.0",
@@ -13,7 +12,7 @@
     "test": "node -e \"console.log('ok')\""
   },
   "dependencies": {
-    "@aws-sdk/client-s3": "^3.666.0",
+    "@aws-sdk/client-s3": "3.616.0",
     "axios": "^1.7.7",
     "bullmq": "^5.10.3",
     "ioredis": "^5.4.1",
