--- a/turbo.json
+++ b/turbo.json
@@ -1,22 +1,15 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": [
-    "pnpm-lock.yaml",
+    "**/.env*",
     "package.json",
-    "pnpm-workspace.yaml",
-    "**/.env*"
+    "package-lock.json"
   ],
-  "pipeline": {
-    "dev": {
-      "cache": false,
-      "persistent": true
-    },
-    "build": {
-      "dependsOn": ["^build"],
-      "outputs": ["dist/**", "build/**", ".next/**", "apps/**/dist/**"]
-    },
-    "lint": { "outputs": [] },
-    "typecheck": { "outputs": [] },
-    "test": { "outputs": [] }
+  "tasks": {
+    "dev": { "cache": false, "persistent": true },
+    "build": { "dependsOn": ["^build"], "outputs": ["dist/**", "build/**", ".next/**"] },
+    "lint": {},
+    "typecheck": {},
+    "test": {}
   }
 }
