--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -1,20 +1,17 @@
 {
   "name": "@hr/web",
-  "private": true,
   "version": "0.3.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview --host 0.0.0.0 --port 9002"
+    "dev": "next dev --hostname 0.0.0.0 --port 9002",
+    "build": "next build",
+    "start": "next start -p 9002"
   },
   "dependencies": {
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "next": "^14.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.3.0",
-    "typescript": "^5.5.4",
-    "vite": "^5.4.0"
+    "@types/react": "19.2.0"
   }
 }
