--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
-  "name": "hr-system",
+  "name": "vrs-platform",
   "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "seed": "tsx src/scripts/create-user.ts"
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.0",
@@ -68,6 +69,7 @@
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
+    "tsx": "^4.16.2",
     "typescript": "^5"
   }
 }
